# ESP32-FreeRTOS

Poc_Adaptor_Task-updated/: CMakeLists.txt  sdkconfig
Poc_Adaptor_Task-updated/main/: CMakeLists.txt
Poc_Adaptor_Task-updated/main/Platform_Adaptor/: Platform_Adaptor.c  Platform_Adaptor.h
Poc_Adaptor_Task-updated/main/Platform_ESP32/: Esp32_log.c  Esp32_storage.c  Esp32_task.c  Esp32_timer.c
Poc_Adaptor_Task-updated/main/Platform_Linux/: CMakeLists.txt  Linux_log.c  Linux_main.c  Linux_storage.c  Linux_task.c  Linux_timer.c
uart_select/main/: uart_select_example_main.c
