 idf_component_register(SRCS  "Platform_Adaptor/Platform_Adaptor.c"
                              "Platform_ESP32/Esp32_task.c"
                              "Platform_ESP32/Esp32_timer.c"
                              "Platform_ESP32/Esp32_log.c"
                              "Platform_ESP32/Esp32_storage.c"
                              INCLUDE_DIRS "")

